fix: background blending was not working on mobile / tablet

--- a/src/styles.css
+++ b/src/styles.css
@@ -51,8 +51,19 @@ body {
 
   background-position: 50% -70%;
   background-image: url(./images/gyro-floral-tall.jpg);
-  background-color: rgba(255,255,255,0.7);
-  background-blend-mode: lighten;
+}
+
+body:before{
+  content: '';
+  width: 100%; 
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.7);
+  z-index: -1;
 }
 
 /* General styles */
